--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="header-btn">
         <button type="button" class="btn btn-outline-primary">Shop</button>
-        <button type="button" class="btn btn-primary">Become our affiliate</button>
+        <button type="button" href="#popup" class="btn btn-primary">Become our affiliate</button>
       </div>
     </header>
 
@@ -135,6 +135,43 @@
         </div>
       </div>
     </footer>
+        <div class="popup" id="popup">
+        <div class="popup__content">
+            <form action="#" class="form"> <div class="u-margin-bottom-medium">
+                <h2 class="heading-secondary">Start ordering now. </h2>
+              </div> 
+              <div class="form__group">
+                <input type="text" class="form__input" placeholder="FullName" id="name" required>
+                 <label for="name" class="form__label"> Full Name</label>
+                </div>
+
+                <div class="form__group">
+                   <input type="email" class="form__input" placeholder="Email Address" id="email" required>
+                 <label for="email" class="form__label"> Email</label>
+                </div>
+
+                <div class="form__group u-margin-bottom-medium">
+                <div class="form__radio-group">
+                <input type="radio" class="form__radio-input" id="small" name="size"> <label for="small" class="form__radio-label"><span class="form__radio-button"></span>
+                                        Small tour
+                                    </label>
+                 </div>
+    
+                 <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="large" name="size">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Large tour
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form__group">
+                                <button class="btn btn--green">Next step &rarr;</button>
+                            </div>
+                        </form>
+                <a href="#" class="btn btn--green">Book Now</a>
+        </div>
+    </div>
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
