--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
       </div>
       <div class="header-btn">
         <button type="button" class="btn btn-outline-primary">Shop</button>
-        <button type="button" href="#popup" class="btn btn-primary">Become our affiliate</button>
-      </div>
+        <a class="btn btn-primary" href="#popup" role="button">Become our affiliate</a>
     </header>
 
     <!-- Gallery -->
