--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <img src="image/joggers.jpeg" alt="" width="400px" height="400px">
         </div>
         <div class="col-6">
-          <h2>Evolve Hoodie</h2>
+          <h2>Evolve Joggers</h2>
           <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
           <button type="button" class="btn btn-outline-primary">Buy now</button>
         </div>
@@ -56,20 +56,20 @@
       
       <div class="row">
           <div class="col-6">
-            <h2>Evolve Hoodie</h2>
+            <h2>Evolve Crop-Top</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
             <button type="button" class="btn btn-outline-primary">Buy now</button>
           </div>
           <div class="col-6">
-            <img src="image/joggers.jpeg" alt="" width="400px" height="400px">
+            <img src="image/crop-top.jpeg" alt="" width="400px" height="400px">
           </div>
       </div>
       <div class="row">
         <div class="col-6">
-          <img src="image/joggers.jpeg" alt="" width="400px" height="400px">
+          <img src="image/jeans.jpeg" alt="" width="400px" height="400px">
         </div>
         <div class="col-6">
-          <h2>Evolve Hoodie</h2>
+          <h2>Evolve Jeans</h2>
           <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
           <button type="button" class="btn btn-outline-primary">Buy now</button>
         </div>
@@ -77,12 +77,12 @@
       
       <div class="row">
           <div class="col-6">
-            <h2>Evolve Hoodie</h2>
+            <h2>Evolve Shirt</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
             <button type="button" class="btn btn-outline-primary">Buy now</button>
           </div>
           <div class="col-6">
-            <img src="image/joggers.jpeg" alt="" width="400px" height="400px">
+            <img src="image/shirt.jpeg" alt="" width="400px" height="400px">
           </div>
       </div>
     </main>
