--- a/index.html
+++ b/index.html
@@ -43,45 +43,45 @@
 
     <!-- MAIN -->
     <main>
-      <div class="row">
-        <div class="col-6">
+      <div class="row container">
+        <div class="col-md-4 col-sm-6">
           <img src="image/joggers.jpeg" alt="" width="400px" height="400px">
         </div>
-        <div class="col-6">
+        <div class="col-md-4 col-sm-6">
           <h2>Evolve Joggers</h2>
           <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
           <button type="button" class="btn btn-outline-primary">Buy now</button>
         </div>
       </div>
       
-      <div class="row">
-          <div class="col-6">
+      <div class="row container">
+          <div class="col-md-4 col-sm-6">
             <h2>Evolve Crop-Top</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
             <button type="button" class="btn btn-outline-primary">Buy now</button>
           </div>
-          <div class="col-6">
+          <div class="col-md-4 col-sm-6">
             <img src="image/crop-top.jpeg" alt="" width="400px" height="400px">
           </div>
       </div>
-      <div class="row">
-        <div class="col-6">
+      <div class="row container">
+        <div class="col-md-4 col-sm-6">
           <img src="image/jeans.jpeg" alt="" width="400px" height="400px">
         </div>
-        <div class="col-6">
+        <div class="col-md-4 col-sm-6">
           <h2>Evolve Jeans</h2>
           <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
           <button type="button" class="btn btn-outline-primary">Buy now</button>
         </div>
       </div>
       
-      <div class="row">
-          <div class="col-6">
+      <div class="row container">
+          <div class="col-md-4 col-sm-6">
             <h2>Evolve Shirt</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
             <button type="button" class="btn btn-outline-primary">Buy now</button>
           </div>
-          <div class="col-6">
+          <div class="col-md-4 col-sm-6">
             <img src="image/shirt.jpeg" alt="" width="400px" height="400px">
           </div>
       </div>
