--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
       <div class="row container">
         <div class="col-md-6 col-sm-6">
-          <img src="image/joggers.jpeg" alt="" width="400px" height="400px">
+          <img src="image/joggers.jpeg" class="img-fluid" alt="" width="400px" height="400px">
         </div>
         <div class="col-md-6 col-sm-6">
           <h2>Evolve Joggers</h2>
