--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="row container">
         <div class="col-md-4 col-sm-6">
-          <img src="image/jeans.jpeg" alt="" width="400px" height="400px">
+          <img src="image/jeans.jpeg" class="img-fluid" alt="jeans">
         </div>
         <div class="col-md-4 col-sm-6">
           <h2>Evolve Jeans</h2>
