--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <button type="button" class="btn btn-outline-primary">Buy now</button>
           </div>
           <div class="col-md-4 col-sm-6">
-            <img src="image/crop-top.jpeg" alt="" width="400px" height="400px">
+            <img src="image/crop-top.jpeg" class="img-fluid" alt="crop-top" width="400px" height="400px">
           </div>
       </div>
       <div class="row container">
@@ -82,7 +82,7 @@
             <button type="button" class="btn btn-outline-primary">Buy now</button>
           </div>
           <div class="col-md-4 col-sm-6">
-            <img src="image/shirt.jpeg" alt="" width="400px" height="400px">
+            <img src="image/shirt.jpeg" class="img-fluid" alt="shirt" width="400px" height="400px">
           </div>
       </div>
     </main>
