--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       
-      <div class="row container">
+      <div class="row container w-100">
           <div class="col-md-4 col-sm-6">
             <h2>Evolve Crop-Top</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
