--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="gender" id="female" checked>
+              <input class="form-check-input" type="radio" name="gender" id="female">
               <label class="form-check-label" for="female">
                 Female
               </label>
