--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Shop</a></li>
+            <li><a href="#shop">Shop</a></li>
             <li><a href="#">Contact</a></li>
           </div>
         </ul>
@@ -42,7 +42,7 @@
     </header>
 
     <!-- MAIN -->
-    <main>
+    <main id="shop">
       <div class="row container">
         <div class="col-md-6 col-sm-6">
           <img src="image/joggers.jpeg" class="img-fluid" alt="joggers">
@@ -54,7 +54,7 @@
         </div>
       </div>
       
-      <div class="row container w-100">
+      <div class="row container">
           <div class="col-md-4 col-sm-6">
             <h2>Evolve Crop-Top</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
