--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </h1>
       </div>
       <div class="header-btn">
-        <button type="button" class="btn btn-outline-primary">Shop</button>
+        <button type="button" href="#shop class="btn btn-outline-primary">Shop</button>
         <a class="btn btn-primary" href="#popup" role="button">Become our affiliate</a>
     </header>
 
