--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <div class="menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#footer">About</a></li>
             <li><a href="#shop">Shop</a></li>
             <li><a href="#">Contact</a></li>
           </div>
@@ -123,7 +123,8 @@
             <div class="col-xs-12 col-sm-6 col-md-3">
               <div class="widget subscribe no-box">
               <h5 class="widget-title">Evolve<span></span></h5>
-              <p>About the company, little discription will goes here.. </p>
+              <p>About Us<p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima? </p>
               </div>
             </div>
         
