--- a/index.html
+++ b/index.html
@@ -185,36 +185,41 @@
 
     <!-- Form popup -->
     <section class="popup" id="popup">
-      <form action="#" class="form" id="myForm"> 
+      <form action="/" class="form" id="form"> 
         <div class="popup__content">
           <a href="#" class="popup__close">&times;</a>
           <div class="u-margin-bottom-medium">
             <h2 class="heading-tertiary">create an account</h2>
           </div> 
-          <div class="form-field error success md-3 lg-12">
+          <div class="form-field md-3 lg-12">
             <label for="username" class="form-label">Username</label>
             <input type="name" class="form-control" id="username" placeholder="UserName">
+            <div class="error"></div>
           </div>
 
-          <div class="form-field error success md-3 lg-12">
+          <div class="form-field md-3 lg-12">
             <label for="email" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="name@example.com">
+            <input type="text" class="form-control" id="email" placeholder="name@example.com">
+            <div class="error"></div>
           </div>
 
-          <div class="form-field error success md-3 lg-12">
+          <div class="form-field md-3 lg-12">
             <label for="phone-number" class="form-label">Phone Number</label>
             <input type="number" class="form-control" id="phone-number" placeholder="+01-388-292">
+            <div class="error"></div>
           </div>
 
-          <div class="form-field error success md-3 lg-12">
+          <div class="form-field md-3 lg-12">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" placeholder="Password">
+            <div class="error"></div>
             <span toggle="#password" class="fa fa-fw fa-eye field-icon toggle-password"></span>
           </div>
 
-          <div class="form-field error success md-3 lg-12">
+          <div class="form-field md-3 lg-12">
             <label for="confirm-assword" class="form-label">Confirm Password</label>
             <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password">
+            <div class="error"></div>
             <span toggle="#confirm-password" class="fa-solid fa-eye field-icon toggle-password"></span>
           </div>
 
@@ -233,7 +238,7 @@
             </div>          
           </div>
           <div class="form__group">
-            <button id="submit" class="btn btn--blue">Thank You &rarr;</button>
+            <button type="submit" class="btn btn--blue">Thank You &rarr;</button>
           </div>
         </div>
       </form>
@@ -242,6 +247,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js" ></script>
-    <script src="js/index.js" ></script>
+    <script defer src="js/index.js" ></script>
 </body>
 </html>
