--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
           </div>
 
           <div class="form-field md-3 lg-12">
-            <label for="confirm-assword" class="form-label">Confirm Password</label>
-            <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password">
+            <label for="password2" class="form-label">Confirm Password</label>
+            <input type="password" class="form-control" id="password2" placeholder="Confirm Password">
             <div class="error"></div>
             <span toggle="#confirm-password" class="fa-solid fa-eye field-icon toggle-password"></span>
           </div>
