--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="form-field md-3 lg-12">
             <label for="password2" class="form-label">Confirm Password</label>
             <input type="password" class="form-control" id="password2" placeholder="Confirm Password">
-            <div class="error"></div>
+            <span class="error"></span>
             <span toggle="#confirm-password" class="fa-solid fa-eye field-icon toggle-password"></span>
           </div>
 
