--- a/index.html
+++ b/index.html
@@ -194,25 +194,25 @@
           <div class="form-field md-3 lg-12">
             <label for="username" class="form-label">Username</label>
             <input type="name" class="form-control" id="username" placeholder="UserName">
-            <div class="error"></div>
+            <span class="error"></span>
           </div>
 
           <div class="form-field md-3 lg-12">
             <label for="email" class="form-label">Email address</label>
             <input type="text" class="form-control" id="email" placeholder="name@example.com">
-            <div class="error"></div>
+            <span class="error"></span>
           </div>
 
           <div class="form-field md-3 lg-12">
             <label for="phone-number" class="form-label">Phone Number</label>
             <input type="number" class="form-control" id="phone-number" placeholder="+01-388-292">
-            <div class="error"></div>
+            <span class="error"></span>
           </div>
 
           <div class="form-field md-3 lg-12">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" placeholder="Password">
-            <div class="error"></div>
+            <span class="error"></span>
             <span toggle="#password" class="fa fa-fw fa-eye field-icon toggle-password"></span>
           </div>
 
