--- a/index.html
+++ b/index.html
@@ -213,14 +213,14 @@
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" placeholder="Password">
             <span class="error"></span>
-            <span toggle="#password" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+            <span id="toggle" class="fa fa-fw fa-eye field-icon" onclick="showHide();"></span>
           </div>
 
           <div class="form-field md-3 lg-12">
             <label for="password2" class="form-label">Confirm Password</label>
             <input type="password" class="form-control" id="password2" placeholder="Confirm Password">
             <span class="error"></span>
-            <span toggle="#confirm-password" class="fa-solid fa-eye field-icon toggle-password"></span>
+            <span id="toggle" class="fa-solid fa-eye field-icon" onclick="showHide();"></span>
           </div>
 
           <div class="md-3 lg-12">
