--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       </div>
       <div class="row container">
         <div class="col-md-4 col-sm-6">
-          <img src="image/jeans.jpeg" class="img-fluid" alt="jeans">
+          <img src="image/hoodie.jpeg" class="img-fluid" alt="jeans">
         </div>
         <div class="col-md-4 col-sm-6">
-          <h2>Evolve Jeans</h2>
+          <h2>Evolve Hoodie</h2>
           <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
           <button type="button" class="btn btn-outline-primary">Buy now</button>
         </div>
@@ -77,7 +77,7 @@
       
       <div class="row container">
           <div class="col-md-4 col-sm-6">
-            <h2>Evolve Shirt</h2>
+            <h2>Evolve Jacket</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?dolor sit amet consectetur adipisicing elit. Eveniet, nulla minima?</P>
             <button type="button" class="btn btn-outline-primary">Buy now</button>
           </div>
@@ -96,13 +96,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="image/crop-top.jpeg" class="d-block w-60" alt="crop-top">
+          <img src="image/wardrope.jpeg" class="d-block w-60" alt="wardrope">
         </div>
         <div class="carousel-item">
-          <img src="image/hoodie.jpeg" class="d-block w-60" alt="hoodie">
+          <img src="image/suit-set.jpeg" class="d-block w-60" alt="suit-set">
         </div>
         <div class="carousel-item">
-          <img src="image/sneakers.jpeg" class="d-block w-60" alt="sneakers">
+          <img src="image/jeans.jpeg" class="d-block w-60" alt="jeans">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
